<resources>
    <string name="app_name">Equinox2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="news">news</string>
    <string name="home">home</string>
    <string name="services">services</string>
    <string name="my_requests">my_requests</string>
    <string name="approvals">approvals</string>
    <string name="last_updated_on_20_may_10_45am">last_updated_on_20_may_10_45am</string>
    <string name="_5">5</string>
    <string name="leave">leave</string>
    <string name="eqinox">eqinox</string>
    <string name="max_verstappen">max_verstappen</string>
    <string name="team_principal_it_development">team_principal_it_development</string>
    <string name="todo1">TODO</string>
    <string name="welcome_to">Welcome to</string>
    <string name="qatar_insurance_group">Qatar Insurance Group</string>
    <string name="login_id">Login ID</string>
    <string name="log_in">Log in</string>
    <string name="password">Password</string>
    <string name="welcome_to_qatar_insurance_group">Welcome to Qatar Insurance Group</string>
    <string name="welcome_to0">Welcome To</string>
    <string name="qatar_insurance_group0">Qatar Insurance Group</string>
    <string name="equinox">Equinox</string>
    <string name="team_principal_it_development0">Team Principal,IT Development</string>
    <string name="max_verstappen0">Max Verstappen</string>
    <string name="leave_request">Leave Request</string>
    <string name="leave_request0">Leave Request</string>
    <string name="_10">10</string>
    <string name="_12">12</string>
    <string name="language">Language</string>
    <string name="englsih">Englsih</string>
    <string name="push_notifications">Push Notifications</string>
    <string name="dashboard">Dashboard</string>
    <string name="approvals1">Approvals</string>
    <string name="constructive_total_loss">Constructive Total Loss</string>
    <string name="my_approval">My Approval</string>
    <string name="last_updated_20_may_2020_10_45_am">Last updated: 20 May 2020 10:45 AM</string>
    <string name="_2_days">2 Days</string>
    <string name="loss_of_pay">Loss Of Pay</string>
    <string name="_20_may_2020_10_10am">20 May 2020, 10:10am</string>
    <string name="_24_may_2020_12_00pm">24 May 2020, 12:00pm</string>
    <string name="_24_may_26_may_2020may">24 May - 26 May, 2020May</string>
    <string name="_2_days1">2 Days</string>
    <string name="_24_june_2020_12_00pm">24 June 2020, 12:00pm</string>
    <string name="_12_may">12 May</string>
    <string name="_1_day">1 Day</string>
    <string name="vice_president_of_sales_it_mis"><![CDATA[Vice President of Sales, IT & MIS]]></string>
    <string name="approval">Approval</string>
    <string name="_24_july_2020_1_00pm">24 July 2020,1:00pm</string>
    <string name="rejected">Rejected</string>
    <string name="approved">Approved</string>
    <string name="all">All</string>
    <string name="approve_remarks">Approve Remarks</string>
    <string name="certificate_pdf">Certificate.pdf</string>
    <string name="_25_may_2020">25 May 2020</string>
</resources>