<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/home"
        android:visible="true"

        android:title="@string/home" />
    <item
        android:id="@+id/nav_services"
        android:icon="@drawable/services"
        android:visible="true"
        android:title="@string/services" />
    <item
        android:id="@+id/nav_requests"
        android:icon="@drawable/requests"
        android:visible="true"
        android:title="@string/my_requests" />
    <item
        android:id="@+id/nav_approvals"

        android:icon="@drawable/tick"
        android:visible="true"

        android:title="@string/approvals" />
    <item
        android:id="@+id/nav_news"
        android:visible="true"
        android:icon="@drawable/news"
        android:title="@string/news" />
</menu>
