<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Activity.Login">


    <TextView
        android:id="@+id/textView"
        style="@style/TextViewStyle"
        android:layout_width="280dp"
        android:layout_height="30dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="208dp"
        android:gravity="center_vertical|center"

        android:text="@string/welcome_to0"
        android:textColor="#323133"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.435"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextLoginId"
        android:layout_width="328dp"
        android:layout_height="48dp"

        android:layout_centerHorizontal="true"
        android:layout_marginTop="112dp"
        android:autofillHints="Login ID"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/login_id"
        android:inputType="text"
        android:padding="12dp"
        android:textColor="#323133"
        android:textColorHint="#767479"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="328dp"
        android:layout_height="48dp"
        android:layout_below="@id/editTextLoginId"
        android:layout_alignStart="@id/editTextLoginId"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textColor="#323133"
        android:textColorHint="#767479"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextLoginId" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="16dp"
        android:layout_height="11.64dp"
        android:layout_alignEnd="@id/editTextPassword"
        android:layout_alignBottom="@id/editTextPassword"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/eye"
        app:layout_constraintEnd_toEndOf="@+id/editTextPassword"
        app:layout_constraintTop_toTopOf="@+id/editTextPassword" />

    <Button
        android:id="@+id/button2"
        android:layout_width="328dp"
        android:layout_height="48dp"
        android:layout_below="@id/editTextPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="76dp"
        android:background="@drawable/custom_button_background"
        android:text="@string/log_in"
        android:textColor="#FFFFFF"
        app:backgroundTint="#AA0535"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editTextPassword" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:src="@drawable/equinox_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        app:layout_constraintVertical_bias="0.148" />

    <TextView
        android:id="@+id/textView3"
        style="@style/TextViewStyle"
        android:layout_width="247dp"
        android:layout_height="55dp"
        android:text="@string/qatar_insurance_group0"
        android:textColor="#323133"
        app:layout_constraintBottom_toTopOf="@+id/editTextLoginId"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.347"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.184" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="153dp"
        android:layout_height="93dp"
        android:layout_marginBottom="12dp"
        android:layout_marginStart="103dp"
        android:layout_marginEnd="103.5dp"
        android:layout_marginVertical="29dp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.691"
        app:srcCompat="@drawable/qic_group___larger_resolution02" />

    <ImageView
        android:id="@+id/imageView77"
        android:layout_width="16dp"
        android:layout_height="16dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.065"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.301"
        app:srcCompat="@drawable/back_arrow" />


</androidx.constraintlayout.widget.ConstraintLayout>
