<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.HomeFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="136dp"
        android:background="#AA0535"


        />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="60dp"
        android:layout_height="20dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="41dp"
        android:text="@string/equinox"
        style="@style/RegularCustomTextStyle"
        android:textSize="13dp"
        android:textColor="#FED4E0" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="18dp"
        android:layout_height="14dp"
        android:layout_marginLeft="330dp"
        android:layout_marginTop="43dp"
        android:src="@drawable/menu" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="22dp"
        android:layout_height="22dp"
        android:layout_marginStart="280dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/notification" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="136dp"
        android:layout_height="20dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="78dp"
        android:text="@string/max_verstappen0"
        style="@style/CustomTextStyle"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="194dp"
        android:layout_height="16dp"
        android:textColor="#FED4E0"
        android:layout_marginStart="15dp"
        android:layout_marginTop="102dp"
        style="@style/RegularCustomTextStyle"
        android:textSize="13dp"
        android:text="@string/team_principal_it_development0" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="315dp"
        android:layout_marginTop="78dp"
        android:background="@drawable/screenshot_20_5_2024_183516_xd_adobe_com"
        android:src="@drawable/rounded_rectangle" />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="175dp"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/horizontalImagesLayout"
            android:layout_width="wrap_content"
            android:layout_height="96dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView77c"
                android:layout_width="310dp"
                android:layout_height="96dp"
                android:layout_marginStart="27dp"
                android:src="@drawable/gentle_reminder_card" />

            <ImageView
                android:id="@+id/imageView78"
                android:layout_width="18dp"
                android:layout_height="10dp"
                android:layout_marginStart="-30dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/grey_cross" />

            <ImageView
                android:id="@+id/imageView77d"
                android:layout_width="304dp"
                android:layout_height="96dp"
                android:layout_marginStart="200dp"
                android:src="@drawable/gentle_reminder_card" />

            <TextView
                android:id="@+id/textView108"
                style="@style/TextViewStyle"
                android:layout_width="192dp"
                android:layout_height="22dp"
                android:layout_marginStart="-700dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:text="Hey Max, Gentle Reminder"
                android:textColor="#6A3444"

                android:textSize="15dp" />

            <TextView
                android:id="@+id/textView109"
                style="@style/TextViewStyle"
                android:layout_width="192dp"
                android:layout_height="47dp"
                android:layout_marginStart="-190dp"
                android:layout_marginTop="40dp"

                android:layout_weight="1"
                android:text="Your resident permit is going to expire on 16th of this month."
                android:textColor="#6A3444"

                android:textSize="13dp" />

            <ImageView
                android:id="@+id/imageView80"
                android:layout_width="52dp"
                android:layout_height="43dp"
                android:layout_marginStart="-278dp"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:src="@drawable/blob" />

            <!-- Add more image views for additional gentle reminders here -->

        </LinearLayout>

    </HorizontalScrollView>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewCards"
        android:layout_width="match_parent"
        android:layout_height="575dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="290dp"
        android:paddingTop="16dp"
        tools:listitem="@layout/card_item" />

    <!--    <ImageView-->
<!--        android:id="@+id/imageView77"-->
<!--        android:layout_width="304dp"-->
<!--        android:layout_height="96dp"-->
<!--        android:layout_marginStart="40dp"-->
<!--        android:layout_marginTop="175dp"-->
<!--        android:src="@drawable/gentle_reminder_card" />-->

<!--    <ImageView-->
<!--        android:id="@+id/imageView78"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="290dp"-->
<!--        android:layout_marginTop="185dp"-->
<!--        android:src="@drawable/grey_cross" />-->

</FrameLayout>